// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JS ITM cross-validation > computePathLoss output snapshot for asheville_composite 1`] = `
{
  "distanceKm": 25,
  "excessLossDb": 34,
  "freeSpaceLossDb": 119.6,
  "frequencyMhz": 915,
  "pathLossDb": 153.6,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for coastal 1`] = `
{
  "distanceKm": 8,
  "excessLossDb": 28.3,
  "freeSpaceLossDb": 109.7,
  "frequencyMhz": 915,
  "pathLossDb": 138.1,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for deep_valley 1`] = `
{
  "distanceKm": 10,
  "excessLossDb": 0,
  "freeSpaceLossDb": 111.7,
  "frequencyMhz": 915,
  "pathLossDb": 111.7,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for double_ridge 1`] = `
{
  "distanceKm": 18,
  "excessLossDb": 29.9,
  "freeSpaceLossDb": 116.8,
  "frequencyMhz": 915,
  "pathLossDb": 146.7,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for flat 1`] = `
{
  "distanceKm": 10,
  "excessLossDb": 0,
  "freeSpaceLossDb": 111.7,
  "frequencyMhz": 915,
  "pathLossDb": 111.7,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for hill_and_valley 1`] = `
{
  "distanceKm": 12,
  "excessLossDb": 30.8,
  "freeSpaceLossDb": 113.3,
  "frequencyMhz": 915,
  "pathLossDb": 144.1,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for mountain_ridge 1`] = `
{
  "distanceKm": 20,
  "excessLossDb": 33,
  "freeSpaceLossDb": 117.7,
  "frequencyMhz": 915,
  "pathLossDb": 150.7,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for rolling_hills 1`] = `
{
  "distanceKm": 20,
  "excessLossDb": 18.2,
  "freeSpaceLossDb": 117.7,
  "frequencyMhz": 915,
  "pathLossDb": 135.9,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for single_ridge 1`] = `
{
  "distanceKm": 15,
  "excessLossDb": 27.9,
  "freeSpaceLossDb": 115.2,
  "frequencyMhz": 915,
  "pathLossDb": 143.1,
}
`;

exports[`JS ITM cross-validation > computePathLoss output snapshot for urban 1`] = `
{
  "distanceKm": 5,
  "excessLossDb": 30,
  "freeSpaceLossDb": 105.7,
  "frequencyMhz": 915,
  "pathLossDb": 135.7,
}
`;
